--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -82,12 +82,12 @@ A fim de realizar os testes necessários, foram utilizadas as seguintes conexõe
 \begin{table}[h]
 	\center
 	\begin{tabular}{l*{6}{c}r}
-	Site						& Hops	& Distância (km)\\
+	Site						& Hops	& Distância (km)	& Localização\\
 	\hline
-	www.bangladesh.gov.bd		& 24		& 15.465,6\\
-	www.thepiratebay.se		& 15		& 10.180,8\\
-	www.km.gov.al				& 15		& 9.363,2\\
-	www.cic.unb.br				& 6		& 5\\
+	www.bangladesh.gov.bd		& 24		& 15.465,6		& Bangladesh\\
+	www.thepiratebay.se		& 15		& 10.180,8		& Suécia\\
+	www.km.gov.al				& 15		& 9.363,2			& Albânia\\
+	www.cic.unb.br				& 6		& 5				& Brasil\\
 	\end{tabular}
 	\caption{Sites escolhidos para teste de \textit{handshaking} TCP}
 	\label{tab:siteshandshaking}
@@ -108,7 +108,7 @@ A fim de realizar os testes necessários, foram utilizadas as seguintes conexõe
 
 \subsection{Resultados e Análise}
 
-Os resultados obtidos foram de acordo com o esperado. Quanto maior a distância física e número de \textit{hops} entre a estação de teste e o site sendo testado, maior o tempo para completar o \textit{handshake} (\(T_{hs}\)), conforme mostrado na Tabela~\ref{tab:resultshandshaking}.
+Os resultados obtidos foram de acordo com o esperado. Quanto maior a distância física e número de \textit{hops} entre a estação de teste e o site sendo testado, maior o tempo para completar o \textit{handshake}, (\(T_{hs}\)), conforme mostrado na Tabela~\ref{tab:resultshandshaking}.
 
 \begin{table}[h]
 	\center
@@ -129,7 +129,68 @@ Os resultados obtidos foram de acordo com o esperado. Quanto maior a distância 
 Apesar de haver uma relação clara entre a distância física, número de \textit{hops} e \(T_{hs}\), não é possível generalizar ou sequer traçar uma relação matemática. Percebe-se que \(T_{hs}\) depende da qualidade da conexão em geral, que é afetada pela distância, porém não exclusivamente.
 
 Para conexão com o site www.cic.unb.br, percebemos que \(T_{hs}\) é muito reduzido, o que atribuímos a estar na mesma infraestrutura de rede que a estação de teste. Em comparação, a conexão com o site localizado em Bangladesh, a mais de 15 mil quilômetros de distância, \(T_{hs}\) é 7200\% maior.
-%Parte 1:%Nesta parte, devem ser medidos alguns aspectos do tráfego de rede. Deve ser mostrada a figura da captura do pacote ou execução do comando que justifique a resposta da pergunta e de preferência plotagens de gráficos que ajudem na compreensão dos resultados.%1.1 Enquanto Wireshark está funcionando, conectar a um site com o seu navegador. Quanto tempo leva para completar o handshaking necessário para estabelecer a conexão? Agora variar a distância para o site que você está se conectando. Isso muda o tempo de conexão? O tempo de conexão dependerá de outras coisas - como hora do dia, número de saltos, etc. Mostre um comparativo dos resultados, analisando os valores obtidos e os fatores que implicam na alteração dos valores obtidos. 1.2 Enquanto o Wireshark está em execução, pingar um número de sites e determinar o tempo exato necessário para que o ping (ver referências do comando ping no DOS e no Linux) seja completado. Quais são as variáveis que influenciam nos valores obtidos (distância, número de hops ? ).%Parte 2:%Acessar um site da sua escolha. Responda as perguntas a seguir, com base no conteúdo do quadro Ethernet contendo a mensagem HTTP GET. Ao responder a uma pergunta, deve ser mostrada a figura da captura do pacote que justifique a resposta da pergunta.%2.1 Qual é o endereço de 48 bits Ethernet do seu computador?%2.2 Qual é o endereço de destino de 48 bits no quadro Ethernet? É este o endereço Ethernet do site acessado (Dica: a resposta é não, mas você precisa justificar o motivo). Que dispositivo tem esse endereço Ethernet?%2.3 Quantos bytes desde o início do quadro Ethernet faz o ASCII "G" em "GET" aparecem no quadro Ethernet?%Responda às seguintes questões, com base no conteúdo do quadro de Ethernet que contém o primeiro byte da mensagem de resposta HTTP.%2.4 Qual é o valor do endereço de origem Ethernet? É este o endereço do seu computador, ou do site acessado ?%2.5 Qual é o endereço de destino no quadro Ethernet? É este o endereço Ethernet do seu computador?
+
+Conforme esperado, a relação entre distância, número de \textit{hops} e o tempo para \textit{handshaking} não é direta porém está presente. Em geral, quanto maior a distância, maior o número de \textit{hops} e maior o tempo necessário para se estabelecer uma conexão.
+
+\section{\textit{Ping}}
+
+\subsection{Procedimento Experimental}
+
+\paragraph{Definição dos casos de teste} Os sites escolhidos para os testes de \textit{ping} foram inicialmente os mesmos utilizados para testes de \textit{handshaking}. Porém, os sites www.thepiratebay.se e www.km.gov.al não responderam a \textit{pings}. Portanto, os retiramos do teste e adicionamos os sites www.google.com e www.terra.com.br. Os sites escolhidos estão listados na Tabela~\ref{tab:sitesping}, bem como o respectivo número de \textit{hops} e distância física em quilômetros até o servidor.
+
+\begin{table}[h]
+	\center
+	\begin{tabular}{l*{6}{c}r}
+	Site						& Hops	& Distância (km)	& Localização\\
+	\hline
+	www.bangladesh.gov.bd		& 24		& 15.465,6		& Bangladesh\\
+	www.google.com		& 7		& 9.684,8		& EUA\\
+	www.terra.com.br				& 5		& 996,8			& Brasil\\
+	www.cic.unb.br				& 6		& 5				& Brasil\\
+	\end{tabular}
+	\caption{Sites escolhidos para teste de \textit{ping}}
+	\label{tab:sitesping}
+\end{table}
+
+\paragraph{Escolha da conexão de rede} Para a realização dos testes foi escolhida a rede fornecida pela OI S.A., devido ao bloqueio implementado pela rede CDT/UnB a \textit{pings}. Porém, para o caso específico do site www.cic.unb.br, utilizamos a rede do CDT/UnB por serem permitidos \textit{pings} que não cruzam a fronteira da rede da UnB.
+
+\paragraph{Preparo do ambiente de testes} Com o objetivo de aproximar os testes de um caso real de uma rede de alto tráfego, os testes foram realizados sob a mesmo cenário dos testes de \textit{handshaking}, com outras estações utilizando a mesma conexão para \textit{streaming} de vídeo e videoconferência via Skype.
+
+\paragraph{Medição dos tempos de \textit{ping}} Através da utilização da ferramenta Ping, do próprio sistema operacional Mac OS X, efetuamos o teste de \textit{ping} para cada site separadamente. Cada teste foi realizado cinco vezes e o tempo considerado foi o médio constatado. Os tempos medidos foram armazenados em arquivos de texto para análise posterior.
+
+\subsection{Resultados e Análise}
+
+Os resultados obtidos foram de acordo com o esperado. Quanto maior a distância física e número de \textit{hops} entre a estação de teste e o site sendo testado, maior o tempo para completar o \textit{ping}, (\(T_{ping}\)), conforme mostrado na Tabela~\ref{tab:resultsping}.
+
+\begin{table}[h]
+	\center
+	\begin{tabular}{l*{6}{c}r}
+	Site						& Hops	& Distância (km)	& \(T_{ping}\)(ms)\\
+	\hline
+	www.bangladesh.gov.bd		& 24		& 15.465,6		& 523,186\\
+	www.google.com		& 7		& 9.684,8		& 181,996\\
+	www.terra.com.br				& 5		& 996,8			& 58,081\\
+	www.cic.unb.br				& 6		& 5				& 2,519\\
+	\end{tabular}
+	\caption{Resultados obtidos para teste de \textit{ping}}
+	\label{tab:resultsping}
+\end{table}
+
+\subsubsection*{Análise}
+
+Os resultados foram muito similares aos obtidos nos testes de \textit{handshaking}, conforme esperado. Ainda em comparação com o teste de \textit{handshaking}, destaca-se a diferença \(T_{hs} - T_{ping} = 5,204 ms\), o que representa tempo de \textit{handshaking} 206\% maior do que o tempo de \textit{ping}. Resultado interessante quando comparado ao ocorrido para o site www.bangladesh.gov.bd, para o qual a mesma relação é de apenas 9\%. Esse resultado é esperado uma vez que pequenas variações serão muito mais significativas quando o próprio tempo é pequeno.
+
+%Parte 1:
+%Nesta parte, devem ser medidos alguns aspectos do tráfego de rede. Deve ser mostrada a figura da captura do pacote ou execução do comando que justifique a resposta da pergunta e de preferência plotagens de gráficos que ajudem na compreensão dos resultados.
+%1.1 Enquanto Wireshark está funcionando, conectar a um site com o seu navegador. Quanto tempo leva para completar o handshaking necessário para estabelecer a conexão? Agora variar a distância para o site que você está se conectando. Isso muda o tempo de conexão? O tempo de conexão dependerá de outras coisas - como hora do dia, número de saltos, etc. Mostre um comparativo dos resultados, analisando os valores obtidos e os fatores que implicam na alteração dos valores obtidos. 1.2 Enquanto o Wireshark está em execução, pingar um número de sites e determinar o tempo exato necessário para que o ping (ver referências do comando ping no DOS e no Linux) seja completado. Quais são as variáveis que influenciam nos valores obtidos (distância, número de hops ? ).
+%Parte 2:
+%Acessar um site da sua escolha. Responda as perguntas a seguir, com base no conteúdo do quadro Ethernet contendo a mensagem HTTP GET. Ao responder a uma pergunta, deve ser mostrada a figura da captura do pacote que justifique a resposta da pergunta.
+%2.1 Qual é o endereço de 48 bits Ethernet do seu computador?
+%2.2 Qual é o endereço de destino de 48 bits no quadro Ethernet? É este o endereço Ethernet do site acessado (Dica: a resposta é não, mas você precisa justificar o motivo). Que dispositivo tem esse endereço Ethernet?
+%2.3 Quantos bytes desde o início do quadro Ethernet faz o ASCII "G" em "GET" aparecem no quadro Ethernet?
+%Responda às seguintes questões, com base no conteúdo do quadro de Ethernet que contém o primeiro byte da mensagem de resposta HTTP.
+%2.4 Qual é o valor do endereço de origem Ethernet? É este o endereço do seu computador, ou do site acessado ?
+%2.5 Qual é o endereço de destino no quadro Ethernet? É este o endereço Ethernet do seu computador?
 
 %\chapter{Procedimento}
 %Procedimento (descrição das ações realizadas, justificativa no caso de mudança de procedimento)
