Answers of part 2 + Screenshots.
TODO: Formatting Latex code and organize prints in apropriate directory.

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -134,7 +134,19 @@ Para conexão com o site www.cic.unb.br, percebemos que \(T_{hs}\) é muito redu
 %\chapter{Procedimento}
 %Procedimento (descrição das ações realizadas, justificativa no caso de mudança de procedimento)
 
-%\chapter{Resultados e análise}
+\chapter{Parte II}
+
+\paragraph{Objetivo} A Parte II tem como objetivo a medição e análise de uma requisição HTTP GET.
+
+\paragraph{2.1} Endereço: 00:88:65:3e:85:7e.
+
+\paragraph{2.2} Endereço: 68:7f:74:eb:12:85. Não, esse é o endereço do roteador conectado à rede local. O roteador é da Linksys (Cisco), como pode-se perceber na figura tem uma referência ao nome "Cisco" junto ao host destino.
+
+\paragraph{2.3} Como se pode ver na Figura, antes do 'G', tem-se 54 bytes. O caracter 'G' de "GET" corresponde ao valor hexadecimal 0x47. Podemos observar na tabela ASCII que esse número é o correspondente ao "G" maiúsculo.
+
+\paragraph{2.4} Endereço: 00:88:65:3e:85:7e. Do meu computador. Pode-se perceber uma referência ao nome "Apple" na figura, junto ao endereço de 48 bits da fonte. Isto ocorre porque "sniffing" foi feito em um Macbook Air.
+
+\paragraph{2.5} Endereço de destino: 68:7f:74:eb:12:85. Não, é o endereço Ethernet do roteador, conforme explicado na questão 2.1.
 
 \chapter{Conclusão}
 
